--- a/public/endgame/index.html
+++ b/public/endgame/index.html
@@ -27,10 +27,10 @@ Interacting with Santa provides a consolidated narrative explanation of the even
     <meta itemprop="wordCount" content="549">
     <title>Endgame :: SANS Holiday Hack Challenge 2025</title>
     <link href="/endgame/index.xml" rel="alternate" type="application/rss+xml" title="Endgame :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
-    <link href="/css/theme.css?1767539554" rel="stylesheet">
-    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767601524" rel="stylesheet">
+    <link href="/css/theme.css?1767601524" rel="stylesheet">
+    <link href="/css/format-html.css?1767601524" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -107,7 +107,7 @@ Interacting with Santa provides a consolidated narrative explanation of the even
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/index.html" title="Sans Holiday Hack Challenge 2025 - Introduction (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act3/snowblind-ambush/index.html" title="Snowblind Ambush (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><a href="/about/index.html" title="About Roger Johnsen (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
@@ -133,11 +133,11 @@ Interacting with Santa provides a consolidated narrative explanation of the even
 
 <h1 id="endgame">Endgame</h1>
 
-<p><a href="#R-image-99dfa31aec74005e6f8ea25951ca66a2" class="lightbox-link"><img alt="Santa" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/santa.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-99dfa31aec74005e6f8ea25951ca66a2"><img alt="Santa" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/santa.gif"></a></p>
+<p><a href="#R-image-eb5f034838bbbe1bbc45454d4b76e5db" class="lightbox-link"><img alt="Santa" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/santa.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-eb5f034838bbbe1bbc45454d4b76e5db"><img alt="Santa" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/santa.gif"></a></p>
 <p>Upon completion of the final objective, the game transitions to the endgame sequence at the Grand Hotel, where the full Counter Hack team is presented:</p>
-<p><a href="#R-image-224ed831563871fa39b3885648ef47b2" class="lightbox-link"><img alt="Endgame party" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/endgame-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-224ed831563871fa39b3885648ef47b2"><img alt="Endgame party" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/endgame-1.png"></a></p>
+<p><a href="#R-image-2dd947900e71a88719d30ba2f4d75507" class="lightbox-link"><img alt="Endgame party" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/endgame-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2dd947900e71a88719d30ba2f4d75507"><img alt="Endgame party" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/endgame-1.png"></a></p>
 <p>Interacting with Santa provides a consolidated narrative explanation of the events leading up to the incident and its resolution. Santa’s dialogue frames the outcome as the successful prevention of a sustained environmental manipulation attack against the Dosis Neighborhood. It also contextualizes Frosty’s actions as being driven by a persistent existential threat—seasonal melting—and highlights an unexploited alternative resolution that did not involve infrastructure sabotage or coercion through third parties (the Gnomes):</p>
 <blockquote>
 <p>Magnificent work, my friends! You&rsquo;ve saved the Dosis Neighborhood from an eternal winter and stopped those mischievous Gnomes from causing any more trouble.</p>
@@ -148,8 +148,8 @@ Interacting with Santa provides a consolidated narrative explanation of the even
 <p>What do you say, my friend?</p>
 <p>Ho! Ho! Ho!</p>
 </blockquote>
-<p><a href="#R-image-0a531b9ae44a8cd97d08e21611095588" class="lightbox-link"><img alt="Frosty" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/frostyborg-melting.webp" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0a531b9ae44a8cd97d08e21611095588"><img alt="Frosty" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/frostyborg-melting.webp"></a></p>
+<p><a href="#R-image-4896d4a6c5a06ea58e7638dee01d3775" class="lightbox-link"><img alt="Frosty" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/frostyborg-melting.webp" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4896d4a6c5a06ea58e7638dee01d3775"><img alt="Frosty" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/frostyborg-melting.webp"></a></p>
 <p>Frosty’s response provides the attacker’s perspective and functions as a post-incident rationale. His dialogue clarifies both motivation and method: the reuse of the original animating mechanism (the enchanted hat) as a force multiplier, and the delegation of operational tasks to the Gnomes. The stated objective was permanence through environmental control, achieved by converting the neighborhood into a continuously refrigerated zone:</p>
 <blockquote>
 <p>Every spring, I melt away. Every year, I fade into nothing while the world moves on without me. But not this time&hellip; not anymore.</p>
@@ -160,8 +160,8 @@ Interacting with Santa provides a consolidated narrative explanation of the even
 <p>Thank you, old friend&hellip;</p>
 </blockquote>
 <p>This exchange effectively serves as an end-of-incident debrief, summarizing root cause (fear of impermanence), capability misuse (magical re-weaponization), and impact (attempted large-scale environmental disruption). With Frosty’s plan neutralized, the scenario concludes and the standard end credits are displayed.</p>
-<p><a href="#R-image-c729a632115ca5b5b030ab067939ff17" class="lightbox-link"><img alt="Credits" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/endgame-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c729a632115ca5b5b030ab067939ff17"><img alt="Credits" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/endgame-2.png"></a></p>
+<p><a href="#R-image-943c6dded18f6c6f5150b3d763de86fe" class="lightbox-link"><img alt="Credits" class="lazy lightbox figure-image" loading="lazy" src="/images/endgame/endgame-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-943c6dded18f6c6f5150b3d763de86fe"><img alt="Credits" class="lazy lightbox lightbox-image" loading="lazy" src="/images/endgame/endgame-2.png"></a></p>
 
   <footer class="footline">
               <i class='fa-fw fas fa-calendar'></i> Dec 23, 2025
@@ -202,7 +202,10 @@ Interacting with Santa provides a consolidated narrative explanation of the even
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="active hidden " data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
+            <li class="active " data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -221,8 +224,8 @@ Interacting with Santa provides a consolidated narrative explanation of the even
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
-    <script src="/js/theme.js?1767539554" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767601524" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767601524" defer></script>
+    <script src="/js/theme.js?1767601524" defer></script>
   </body>
 </html>
