--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,10 +27,10 @@ Roger is an active participant in Capture The Flag (CTF) competitions, with part
     <meta itemprop="wordCount" content="279">
     <title>About Roger Johnsen :: SANS Holiday Hack Challenge 2025</title>
     <link href="/about/index.xml" rel="alternate" type="application/rss+xml" title="About Roger Johnsen :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
-    <link href="/css/theme.css?1767539554" rel="stylesheet">
-    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767601524" rel="stylesheet">
+    <link href="/css/theme.css?1767601524" rel="stylesheet">
+    <link href="/css/format-html.css?1767601524" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -112,7 +112,7 @@ Roger is an active participant in Capture The Flag (CTF) competitions, with part
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/index.html" title="Sans Holiday Hack Challenge 2025 - Introduction (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/endgame/index.html" title="Endgame (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
@@ -191,6 +191,10 @@ Roger is an active participant in Capture The Flag (CTF) competitions, with part
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
+            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="active " data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -209,8 +213,8 @@ Roger is an active participant in Capture The Flag (CTF) competitions, with part
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
-    <script src="/js/theme.js?1767539554" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767601524" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767601524" defer></script>
+    <script src="/js/theme.js?1767601524" defer></script>
   </body>
 </html>
