--- a/public/act3/snowcat-rce-and-priv-esc/index.html
+++ b/public/act3/snowcat-rce-and-priv-esc/index.html
@@ -27,10 +27,10 @@ I love all things testing and QA, maintaining systems, logistics, and helping ou
     <meta itemprop="wordCount" content="1636">
     <title>Snowcat RCE &amp; Priv Esc :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/snowcat-rce-and-priv-esc/index.xml" rel="alternate" type="application/rss+xml" title="Snowcat RCE &amp; Priv Esc :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
-    <link href="/css/theme.css?1767539554" rel="stylesheet">
-    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767601524" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767601524" rel="stylesheet">
+    <link href="/css/theme.css?1767601524" rel="stylesheet">
+    <link href="/css/format-html.css?1767601524" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -470,7 +470,9 @@ flowchart LR
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="parent hidden " data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu">
+            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
+            <li class="parent " data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu">
             <li class="" data-nav-url="/act3/gnome-tea/index.html"><a class="padding" href="/act3/gnome-tea/index.html">Gnome Tea</a></li>
             <li class="" data-nav-url="/act3/hack-a-gnome/index.html"><a class="padding" href="/act3/hack-a-gnome/index.html">Hack-a-Gnome</a></li>
             <li class="active " data-nav-url="/act3/snowcat-rce-and-priv-esc/index.html"><a class="padding" href="/act3/snowcat-rce-and-priv-esc/index.html">Snowcat RCE &amp; Priv Esc</a></li>
@@ -479,6 +481,7 @@ flowchart LR
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
             <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
+            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -497,22 +500,22 @@ flowchart LR
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/js-yaml/js-yaml.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-color.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-dispatch.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-drag.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-ease.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-interpolate.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-selection.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-timer.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-transition.min.js?1767539554" defer></script>
-    <script src="/js/d3/d3-zoom.min.js?1767539554" defer></script>
-    <script src="/js/mermaid/mermaid.min.js?1767539554" defer></script>
+    <script src="/js/js-yaml/js-yaml.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-color.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-dispatch.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-drag.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-ease.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-interpolate.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-selection.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-timer.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-transition.min.js?1767601524" defer></script>
+    <script src="/js/d3/d3-zoom.min.js?1767601524" defer></script>
+    <script src="/js/mermaid/mermaid.min.js?1767601524" defer></script>
     <script>
       window.relearn.themeUseMermaid = JSON.parse("{}");
     </script>
-    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
-    <script src="/js/theme.js?1767539554" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767601524" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767601524" defer></script>
+    <script src="/js/theme.js?1767601524" defer></script>
   </body>
 </html>
